main.css
@font-face {
  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
  src: url(./font/CascadiaCode.otf);
}

/* ! main */

* {
  box-sizing: border-box;
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
  border: 0;
}

html,
body {
  background-color: #282828;
  font-family: Sora, Helvetica, Arial, sans-serif;
  color: #707070;
}

img {
  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
}

.container {
  border: 3px solid blue;
  padding: 0 35px;
}

/* ! fonts */

h1,
h2,
h3,
h4,
h5,
h6 { font-family: Sora, Helvetica, Arial, sans-serif; }

h1 { font-size: 3em; }
h2 { font-size: 2.8em; }
h3 { font-size: 2em; }
h4 { font-size: 1.8em; }
h5 { font-size: 1.6em; }
h6 { font-size: 1.4em; }

p {
  margin-bottom: 17px;
  font-family: Sora, Helvetica, Arial, sans-serif;
  font-size: 1em;

}

p:last-child {
  margin-bottom: 0;
}

a {
  text-decoration: none;
  color: #B8B8B8;
  transition: ease 0.1s;
}

a:hover {
  color: #729BAC;
}

.mono {
  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
  font-size: 1em;
}

/* emojis */

.eWave::before {
  content: "\01F44B";
}

/* nav menu */

.fixedtop {
  position: fixed;
  top: 0;
  width: 100%;
  overflow: hidden;
  background-color: #282828;
}

nav ul {
  list-style: none;
  display: inline-flex;
  margin: 0;
  padding: 0;
}

nav ul.left {
  float: left;

}

nav img {
  margin: 20px 20px;
  width: 50px;
  height: 50px;
  transition: ease 0.1s;
}

nav img:hover {
  filter: invert(63%) sepia(10%) saturate(1029%) hue-rotate(152deg) brightness(160%) contrast(88%);
  -webkit-filter: invert(63%) sepia(10%) saturate(1029%) hue-rotate(152deg) brightness(160%) contrast(88%);
}

nav ul.right {
  float: right;
  margin: 35px 20px;
}

nav a {
  text-decoration: none;
  color: #B8B8B8;
  transition: ease 0.1s;
}

nav a#last {
  padding: 10px 15px;
  color: #729BAC;
  border: 2px solid #729BAC;
  border-radius: 6px;
  transition: ease 0.1s;
}

nav a#last:hover {
  background-color: #729BAC;
  color: #282828;
}

nav a:hover {
  color: #729BAC;
}

nav ul>li {
  padding: 10px 10px;
}

nav ul.right>li>i {
  margin-right: 3px;
  font-style: normal;
  color: #729BAC;
}

/* head */

.head {
  margin-top: 120px;
  padding: 7.5% 12%;
}

[role="doc-subtitle"] {
  margin-bottom: 15px;
  color: #729BAC;
  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
  font-size: 1em;
  width: fit-content;
}

h1.myName {
  margin: 15px 0;
  color: #B8B8B8;
  width: fit-content;
}

h2.myJob {
  margin: 15px 0;
  color: #707070;
  width: fit-content;
}

p.myDesc {
  margin-top: 30px;
  color: #707070;
  line-height: 25px;
  max-width: 650px;
}

/* social icons */

.inline {
  padding: 25px 0;

}

.social {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  list-style: none;
  margin: 0;
  padding: 0;
}

.social img {
  margin: 4px 10px 0px 10px;
  width: 40px;
  height: 100%;
  transition: ease 0.1s;
}

.social img:hover {
  filter: invert(63%) sepia(10%) saturate(1029%) hue-rotate(152deg) brightness(160%) contrast(88%);
  -webkit-filter: invert(63%) sepia(10%) saturate(1029%) hue-rotate(152deg) brightness(160%) contrast(88%);
} 

.social img#last {
  margin-right: 25px;
}

/* about */

.about {
  padding: 5% 12%; 
}

.about .heading {
  margin-bottom: 25px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.about .heading i {
  margin-right: 5px;
  font-style: normal;
  color: #729BAC;
  font-family: "Cascadia Code", "Fira Mono", "SF Mono", monospace;
  font-size: 1.6em;
}

.about .heading h3 {
  color: #B8B8B8;
}

.about .me {
  display: flex;
  align-items: initial;
  padding: 15px 45px;
}

.about .me .longDesc {
  margin-right: auto;
  padding-right: 50px;
}

.about .me .myPic {
  margin-left: auto;
  padding-left: 50px;
}

.about .me .myPic img {
  border: 3px solid #B8B8B8;
  filter: grayscale(100%);
  border-radius: 68% 32% 70% 30% / 30% 70% 30% 70%;
  transition: ease 0.1s;
}

.about .me .myPic img:hover {
  filter: grayscale(0%);
}

.techSkills {
  list-style: none;
  display: flex;
  align-items: center;
  width: fit-content;
}

.techSkills li {
  margin-top: 10px;
  margin-right: 25px;
}

.techSkills li:last-child { margin-right: 0; }

.techSkills li img {
  cursor: pointer;
  transition: ease 0.4s;
}

.techSkills li img:hover {
  filter: brightness(180%);
}

